Class Person Created, views def act to works with Person Class

--- a/django/enviroment_django/Scripts/user_management/url_parameters/templates/half_number.html
+++ b/django/enviroment_django/Scripts/user_management/url_parameters/templates/half_number.html
@@ -10,8 +10,9 @@
     <table style="width: 500px;"> <!--aumenta el tamaño de los espacios dentro de las celdas-->
         <thead>
             <tr>
-                <th>{{person_name}} Your Half Number is </th> <!--Cabezera o titulo de la columna-->
-                <th>{{half_number}} </th>
+                <th>Se ha creado la cuenta de {{person_name}}</th> <!--Cabezera o titulo de la columna-->
+                <th>Su usuario es: {{username}} </th>
+                <th>Fecha de Creacion {{creation_date}} </th>
             </tr> <!--Table Route o una fila dentro de la tabla-->
         </thead>
 </tbody>
